infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: elderping
  labels:
    app.kubernetes.io/name: elderping
    app.kubernetes.io/managed-by: kubectl
