infrastructure/external-db-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: health-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: reminder-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: alert-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: notes-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: ai-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: report-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: notification-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: audit-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: finops-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: ui-db-dev
  namespace: healthcare
spec:
  type: ExternalName
  externalName: elderpinq-dev-db.cabyega4kjww.us-east-1.rds.amazonaws.com
